Archive2/0c/75c5009aa34a70/output
main.cpp:34:0: warning: ignoring #pragma STDC FENV_ACCESS [-Wunknown-pragmas]
         #pragma STDC FENV_ACCESS ON
 ^
main.cpp: In function 'int main()':
main.cpp:12:18: error: 'hexfloat' is not a member of 'std'
               << std::hexfloat << " (" << to1 << ")\n" << std::defaultfloat;
                  ^
main.cpp:12:59: error: 'defaultfloat' is not a member of 'std'
               << std::hexfloat << " (" << to1 << ")\n" << std::defaultfloat;
                                                           ^
main.cpp:16:18: error: 'hexfloat' is not a member of 'std'
               << std::hexfloat << " (" << to2 << ")\n" << std::defaultfloat;
                  ^
main.cpp:16:59: error: 'defaultfloat' is not a member of 'std'
               << std::hexfloat << " (" << to2 << ")\n" << std::defaultfloat;
                                                           ^
main.cpp:21:18: error: 'hexfloat' is not a member of 'std'
               << std::hexfloat << " (" << from3 << ')' << std::defaultfloat
                  ^
main.cpp:21:59: error: 'defaultfloat' is not a member of 'std'
               << std::hexfloat << " (" << from3 << ')' << std::defaultfloat
                                                           ^
main.cpp:22:37: error: 'hexfloat' is not a member of 'std'
               << "\nand " << to3 << std::hexfloat << " (" << to3 << ")\n"
                                     ^
main.cpp:23:18: error: 'defaultfloat' is not a member of 'std'
               << std::defaultfloat << std::setprecision(20);
                  ^
main.cpp:38:31: error: 'hexfloat' is not a member of 'std'
                   << from4 << std::hexfloat << " (" << from4 << ')'
                               ^
main.cpp:39:22: error: 'defaultfloat' is not a member of 'std'
                   << std::defaultfloat << " is " << to4
                      ^
main.cpp:40:22: error: 'hexfloat' is not a member of 'std'
                   << std::hexfloat << " (" << to4 << ")\n" << std::defaultfloat;
                      ^
main.cpp:40:63: error: 'defaultfloat' is not a member of 'std'
                   << std::hexfloat << " (" << to4 << ")\n" << std::defaultfloat;
                                                               ^
